// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMINISTERS_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_ad: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM .entities.v2.latest.security___namespace__-*
| WHERE (entity.relationships.administers.raw_identifiers.host.name IS NOT NULL)
    AND entity.source == \\"entityanalytics_ad\\"
| EVAL actorUserId = entity.id
| EVAL t0 = CONCAT(\\"host:\\", entity.relationships.administers.raw_identifiers.host.name)
| EVAL targetEntityId = t0
| MV_EXPAND targetEntityId
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\" AND targetEntityId RLIKE \\".+:.+\\"
| STATS administers = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`ADMINISTERS_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_ad: targets-per-actor ES|QL with watermark is locked 1`] = `
"FROM .entities.v2.latest.security___namespace__-*
| WHERE (entity.relationships.administers.raw_identifiers.host.name IS NOT NULL)
    AND entity.source == \\"entityanalytics_ad\\"
    AND entity.lifecycle.last_seen > \\"2026-06-01T00:00:00.000Z\\"
| EVAL actorUserId = entity.id
| EVAL t0 = CONCAT(\\"host:\\", entity.relationships.administers.raw_identifiers.host.name)
| EVAL targetEntityId = t0
| MV_EXPAND targetEntityId
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\" AND targetEntityId RLIKE \\".+:.+\\"
| STATS administers = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;
